Added styles to jumbotron

--- a/yoga.css
+++ b/yoga.css
@@ -1,5 +1,14 @@
+html, body {
+  font-family: 'Libre Baskerville', sans-serif;
+}
 .header {
   height: 80px;
   width: 100%;
-  background-color: #F7972F
+  background-color: #827717;
 }
+.jumbotron {
+  background: url('https://cdn.pixabay.com/photo/2016/12/08/14/49/relaxing-1891881__340.jpg') no-repeat center center;
+  background-size: cover;
+  height: 1000px;
+  width: 100%;
+  }
