--- a/yoga.css
+++ b/yoga.css
@@ -4,11 +4,11 @@ html, body {
 .header {
   height: 80px;
   width: 100%;
-  background-color: #827717;
+
 }
 .jumbotron {
   background: url('https://cdn.pixabay.com/photo/2016/12/08/14/49/relaxing-1891881__340.jpg') no-repeat center center;
-  background-size: cover;
+  background-size: 100%;
   height: 1000px;
   width: 100%;
   }
