--- a/yoga.css
+++ b/yoga.css
@@ -8,7 +8,7 @@ html, body {
 }
 .jumbotron {
   background: url('https://cdn.pixabay.com/photo/2016/12/08/14/49/relaxing-1891881__340.jpg') no-repeat center center;
-  background-size: 100%;
+  background-size: 100% 100%;
   height: 1000px;
   width: 100%;
   }
